[package]
name = "genawaiter_iterator"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A convenient way to create Iterators from Genawaiter's generators"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genawaiter = "0.99.1"
