[package]
name = "genawaiter_iterator"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A convenient way to create Iterators from Genawaiter's generators"
homepage = "https://github.com/megahomyak/genawaiter_iterator"
repository = "https://github.com/megahomyak/genawaiter_iterator.git"
documentation = "https://docs.rs/genawaiter_iterator/latest/genawaiter_iterator/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genawaiter = "0.99.1"
